...
import by.vsdev.tablet.demo.ui.R
import by.vsdev.tablet.demo.ui.components.molecules.AppOutlinedTextField
import by.vsdev.tablet.demo.ui.presentation.table.MAX_CELL_TEXT_LENGTH
import by.vsdev.tablet.demo.ui.theme.AppSpacing
import by.vsdev.tablet.demo.ui.theme.AppTheme

internal const val EDITOR_FIELD_TAG = "editorField"

@OptIn(ExperimentalLayoutApi::class)
@Composable
internal fun EditorPane(
    index: Int?,
    currentText: String?,
...
